changes (not through yet)

--- a/TODO.txt
+++ b/TODO.txt
@@ -12,3 +12,10 @@ repository? We don't want to allow people to change a module once it
 becomes an ISO standard.
 
 Might need to add ABSTRACT ENTITY to DTD
+
+Replace various refs to express objects with single express_ref
+element
+
+Make sure ref elts exist for notes, figures, examples
+
+Use Dublin Core XML/RDF?
