--- a/TODO.txt
+++ b/TODO.txt
@@ -1,16 +1,6 @@
-Add tables to DTD.
+------------------------------------------------------------
+Navigation
+- Set up navigation
 
-What to do about express-g image maps?
-
-Think about how to get PLCS-managed CVS repository to work in
-conjunction with our CVS repository.
-
-Question: At what granularity can we control access to a CVS
-repository? We don't want to allow people to change a module once it
-becomes an ISO standard.
-
-Might need to add ABSTRACT ENTITY to DTD
-
-Use Dublin Core XML/RDF?
-
-.
+------------------------------------------------------------
+Improve navigation through EXPRESS-G diagrams
