--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,14 @@
 ------------------------------------------------------------
 Navigation
 - Set up navigation
-
+- list express_ref uof
 ------------------------------------------------------------
 Improve navigation through EXPRESS-G diagrams
+
+------------------------------------------------------------
+Check:
+  normref.inc and terms
+
+  empty mapping
+
+check out 2-manifold
